--- a/index.html
+++ b/index.html
@@ -6,39 +6,43 @@
     <link rel="icon" type="image/x-icon" href="html.png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="script.js"></script>
   </head>
-  <body>
-    <nav>
-    </nav>
-    <main>
       <body>
-        <header>
-           <nav>
+        <header class="header">
+         <img src="sunrise (1).png" alt="logo illustrasjon av en sol">
+           <nav class="headerNav">
               <a href="">Hjem</a>
               <a href="">Om meg</a>
               <a href="">Prosjekter</a>
            </nav>
         </header>
         <main>
-           <section>
-              <h1>Velkommen til min side</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui similique accusamus voluptate laudantium, voluptas, aspernatur architecto, nulla atque ipsam facere nam dicta a quam in veniam cumque temporibus eum odit?</p>
-           </section>
-           <section>
-              <h2>Om meg</h2>
-           </section>
-           <section>
-              <h2>Prosjekter</h2>
+         <!-- Hero section-->
+           <section class="heroSection">
+            <h1>Velkommen</h1>
+            <div class="heroIntro">
+             <div class="heroText">
+              <p>Lorem ipsum dolor sit amet.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, quasi?</p>
+             </div> 
+             <img class="heroImg" src="heroImg.jpg" alt="bilde av natur">
+            </div>
            </section>
         </main>
-        <footer>
-           <h3>Laget av Therese</h3>
+        <footer class="footer">
+         <div class="footerNav">
+            <nav>
+            <a href="">Finn meg på Github</a>
+            </nav>
+            <nav>
+            <a href="">Portfolio</a>
+            </nav>
+         </div>
+
+         <img src="sunrise (1).png" alt="logo illustrasjon av en sol">
+         <h3>Laget av Therese</h3>
         </footer>
       </body>
   </body>
