--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <a href="">Portfolio</a>
             </nav>
          </div>
-
+         <div class="footerEnd">
          <img src="sunrise (1).png" alt="logo illustrasjon av en sol">
-         <h3>Laget av Therese</h3>
+         <h3>Laget av Therese</h3></div>
         </footer>
       </body>
   </body>
