--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <p>Lorem ipsum dolor sit amet.</p>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, quasi?</p>
              </div> 
-             <img class="heroImg" src="heroImg.jpg" alt="bilde av natur">
+             <img class="heroImg" src="bilde3.jpg" alt="bilde av natur">
             </div>
            </section>
         </main>
